# train-detector

./: .gitignore  prep-br.py  prep.py  prepare-positives.sh  randomize-positive-samples.sh
experiments/: .gitignore  manual-training.txt  positive.txt
positive/: positive.txt  vecfile.vec
results/: ._br2-cascade.txt  br1-cascade.txt  br1-cascade.xml  br2-cascade.txt  br2-cascade.xml  br3-cascade.txt  br3-cascade.xml  br3-randomization.txt  br4-cascade.txt  br4-cascade.xml  br4-cascade10.xml  br4-cascade11.xml  br4-cascade12.xml  br4-cascade13.xml  br4-cascade14.xml  br4-cascade15.xml  br4-cascade16.xml  br4-cascade17.xml  br4-cascade18.xml  br4-cascade5.xml  br4-cascade6.xml  br4-cascade7.xml  br4-cascade8.xml  br4-cascade9.xml
utils/: tools-misc.md
utils/positives-extractor/: .gitignore  CMakeLists.txt  DetectRegions.cpp  DetectRegions.h  Plate.h  detect-all-images.sh  extract-positives-from-dir.sh  main.cpp  results.out
